--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.AcademiaTCC"
         tools:targetApi="31">
         <activity
+            android:name=".home_aluno"
+            android:exported="false" />
+        <activity
+            android:name=".TreinoActivity"
+            android:exported="false" />
+        <activity
             android:name=".HomeActivity"
             android:exported="false" />
         <activity
